# QtProject

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
.cache/clangd/index/: main.cpp.0428D38867646198.idx
